# Master-Thesis

./: .gitattributes  .gitignore  Experiments.html  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.codex_tmp/: main_preset_smoke.csv
archive_old/root_files/: .gitignore  README.md  pyproject.toml
docs/: Project_structure.qmd  project_structure_summary.md  time_table.qmd
documents/: Calibration and Tuning Experiments.qmd  Experiments.qmd  Full_Run_Results.qmd  Full_Run_Results_Meeting.qmd  _metadata.yml  meeting-version.lua  monte_carlo_runs_summary.qmd  references.bib
reports/: monte_carlo_runs_summary.qmd
results/: dml_R500_k3_pen007_grid21_block300_399_manifest.json
results/diagnostics/: adaptive_grid_smoke_R10.csv  adaptive_grid_smoke_R10_manifest.json  ch_components_smoke_R5.csv  ch_components_smoke_R5_manifest.json  oracle_calibration_summary.csv  oracle_grid_resolution_summary.csv
results/experiments/: dml_R20_grid21_k3.csv  dml_R20_grid21_k3_manifest.json  dml_R20_grid21_k3_pen007_highsipm.csv  dml_R20_grid21_k3_pen007_highsipm_manifest.json  dml_R20_grid21_k5.csv  dml_R20_grid21_k5_manifest.json  dml_calib_R5_k2_pen007_highsipm.csv  dml_calib_R5_k2_pen007_highsipm_manifest.json  dml_calib_R5_k3_pen007_grid11_highsipm.csv  dml_calib_R5_k3_pen007_grid11_highsipm_manifest.json  dml_calib_R5_k3_pen007_solver_highsipm.csv  dml_calib_R5_k3_pen007_solver_highsipm_manifest.json  dml_calib_R5_k5_pen005_solver_highsipm.csv  dml_calib_R5_k5_pen005_solver_highsipm_manifest.json  dml_calib_R5_pen001_solver_highsds.csv  dml_calib_R5_pen001_solver_highsds_manifest.json  dml_calib_R5_pen001_solver_highsipm.csv  dml_calib_R5_pen001_solver_highsipm_manifest.json  dml_calib_R5_pen002_solver_highsipm.csv  dml_calib_R5_pen002_solver_highsipm_manifest.json  dml_calib_R5_pen005_solver_highsipm.csv  dml_calib_R5_pen005_solver_highsipm_manifest.json  dml_calib_R5_pen010_solver_highsipm.csv  dml_calib_R5_pen010_solver_highsipm_manifest.json  fast_dml_new_sparsity.csv  fast_dml_new_sparsity_manifest.json  fast_grid21_dml_only.csv  fast_grid21_oracle_only.csv  fast_oracle.csv  fast_oracle_manifest.json  fast_summary (2).csv  oracle_R100_grid21_default_manifest.json  oracle_R100_grid41_wide_manifest.json  post_selection_R20_lasso120.csv  post_selection_R20_lasso120_manifest.json  post_selection_R20_lasso150.csv  post_selection_R20_lasso150_manifest.json  post_selection_R20_lasso180.csv  post_selection_R20_lasso180_grid0_2.csv  post_selection_R20_lasso180_grid0_2_manifest.json  (+9 more)
results/raw/: manifest.json
results/report_full_run/: analysis_report.md  table_01_overall.csv  table_02_by_quantile.csv  table_03_by_strength.csv  table_04_by_n_p.csv  table_05_by_design_cell.csv  table_06_worst_cells.csv  table_07_diagnostics.csv  validation.json
results/summary/: main_diagnostic_R10_summary.csv  main_diagnostic_R10_summary_fixed_cr.csv
results/tables_fixed_cr/: bias_wide.csv  comparison_table.csv  coverage_wide.csv  cr_length_wide.csv  diagnostic_table.csv  failure_rate_wide.csv  mae_wide.csv  rmse_wide.csv  runtime_wide.csv
scenarios/: _cli_common.py  _common.py  _dedicated_runner.py  assemble_oracle_ivqr.py  assemble_post_selection_ivqr.py  clean_dml_results.py  clean_oracle_results.py  clean_post_selection_results.py  diagnose_oracle_grid_inversion.py  diagnose_oracle_true_alpha.py  full_control_ivqr.py  main_simulation.py  run_dml_ivqr.py  run_oracle_ivqr.py  run_post_selection_ivqr.py  run_simulation.py
scripts/: 01_pilot_simulation.py  01_smoke_test.py  02_pilot_simulation.py  02_run_full_simulation.py  03_make_tables.py  03_run_full_simulation.py  04_make_tables.py  04_run_full_control_ivqr.py  audit_r500_phase2.py  audit_r500_results.py  build_r500_thesis_package.py  diagnose_oracle_calibration.py  diagnose_oracle_grid_resolution.py  finalize_r500_release_hygiene.py  make_results.py  merge_simulation_blocks.py  preflight_ch.py  report_full_run.py  review_r500_thesis_delivery.py  run_full_control_benchmark.py  run_main_simulation.py  update_raw_manifest.py
src/: __init__.py  config.py
src/analysis/: __init__.py  data.py  figures.py  full_run_report.py  r500_audit.py  r500_delivery_review.py  r500_phase2.py  r500_release_hygiene.py  r500_thesis_package.py  tables.py
src/dgp/: __init__.py  designs.py  generators.py  true_parameters.py
src/estimators/: __init__.py  base.py  ch_inverse_ivqr.py  dml.py  dml_ivqr.py  full_control.py  full_control_ivqr.py  full_ivqr.py  oracle.py  oracle_ivqr.py  post_selection.py  post_selection_ivqr.py  post_selection_ivqr_aligned.py  post_selection_quantile_ivqr.py  quantile_selection.py
src/inference/: __init__.py  alpha_grid.py  confidence_regions.py  metrics.py  moments.py
src/ivqr/: __init__.py  alpha_grid.py  ch_inverse.py  confidence_regions.py  metrics.py  moments.py
src/ivqr_sim/: __init__.py  config.py  data.py  dgp.py  inference.py  metrics.py  moments.py  true_effects.py
src/reporting/: __init__.py  figures.py  summaries.py  tables.py
src/simulation/: __init__.py  _validation.py  batching.py  chunking.py  config.py  designs.py  dispatch.py  dml_output.py  estimators_config.py  (+10 more)
tests/: CHARACTERIZATION.md  _path.py  conftest.py  helpers.py  test_aggregate.py  test_analysis.py  test_cli_retirement.py  test_config.py  test_data_paths.py  test_dedicated_runners.py  test_design.py  test_dgp.py  test_dml_ivqr.py  test_dml_output.py  test_estimators.py  test_estimators_smoke.py  test_execution_equivalence.py  test_execution_modules.py  test_full_ivqr.py  test_full_run_report.py  test_helpers.py  test_import_contracts.py  test_inference.py  test_ivqr.py  test_merge_simulation_blocks.py  test_metrics.py  test_moments.py  test_oracle_calibration_diagnostic.py  test_oracle_grid_inversion_diagnostic.py  test_oracle_grid_resolution_diagnostic.py  test_oracle_output.py  test_oracle_true_alpha_diagnostic.py  test_output_schemas.py  test_post_selection_ivqr.py  test_post_selection_output.py  test_r500_audit.py  test_r500_delivery_review.py  test_r500_phase2.py  test_r500_release_hygiene.py  test_r500_thesis_package.py  (+10 more)
(+189 files in other folders)
