[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "master-thesis-ivqr"
version = "0.1.0"
description = "Monte Carlo simulation project for IVQR and DML-IVQR estimators."
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--basetemp=.pytest_tmp -p no:ddtrace -p no:cacheprovider"
markers = [
    "slow: long-running simulation, multiprocessing, or subprocess integration tests",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.10,<3.13"
numpy = "*"
pandas = "*"
scipy = "*"
scikit-learn = "*"
statsmodels = "*"
matplotlib = "*"
pytest = "*"
ruff = ">=0.15.21,<0.16"

[tool.pixi.pypi-dependencies]
master-thesis-ivqr = { path = ".", editable = true }

[tool.pixi.tasks]
fast = "python scenarios/run_simulation.py --mode fast"
full = "python scenarios/run_simulation.py --mode full"
import_check = "python -c \"import analysis; import dgp; import estimators; import ivqr; import simulation\""
lint = "ruff check src tests scenarios scripts"
results = "python scripts/make_results.py"
raw_manifest = "python scripts/update_raw_manifest.py"
test = "pytest tests -m 'not slow'"
test_slow = "pytest tests -m slow"
