[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "master-thesis-ivqr"
version = "0.1.0"
description = "Monte Carlo simulation project for IVQR and DML-style IVQR estimators."
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--basetemp=.pytest_tmp -p no:ddtrace -p no:cacheprovider"
markers = [
    "slow: long-running simulation, multiprocessing, or subprocess integration tests",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.10,<3.13"
numpy = "*"
pandas = "*"
scipy = "*"
scikit-learn = "*"
statsmodels = "*"
matplotlib = "*"
pytest = "*"
ruff = ">=0.15.21,<0.16"

[tool.pixi.pypi-dependencies]
master-thesis-ivqr = { path = ".", editable = true }

[tool.pixi.tasks]
oracle = "python scenarios/run_oracle_ivqr.py"
post_selection = "python scenarios/run_post_selection_ivqr.py"
dml = "python scenarios/run_dml_ivqr.py"
final_oracle = "python scenarios/run_oracle_ivqr.py --reps 500 --alpha-min -1 --alpha-max 3 --alpha-grid-size 21 --critical-value-multiplier 1.0 --base-seed 12345 --output results/experiments/oracle_ivqr_r500.csv"
final_post_selection = "python scenarios/run_post_selection_ivqr.py --reps 500 --alpha-min -1 --alpha-max 3 --alpha-grid-size 21 --critical-value-multiplier 1.0 --base-seed 12345 --selection-lasso-multiplier 1.8 --output results/experiments/post_selection_ivqr_r500.csv"
final_dml = "python scenarios/run_dml_ivqr.py --reps 500 --alpha-min -1 --alpha-max 3 --alpha-grid-size 21 --critical-value-multiplier 1.0 --base-seed 12345 --dml-k-folds 3 --dml-quantile-penalty 0.07 --dml-quantile-solver highs-ipm --dml-ridge-alpha 1.0 --output results/experiments/dml_ivqr_r500.csv"
final_dry_run = "python scenarios/run_oracle_ivqr.py --reps 500 --alpha-min -1 --alpha-max 3 --alpha-grid-size 21 --critical-value-multiplier 1.0 --base-seed 12345 --output results/experiments/oracle_ivqr_r500.csv --dry-run && python scenarios/run_post_selection_ivqr.py --reps 500 --alpha-min -1 --alpha-max 3 --alpha-grid-size 21 --critical-value-multiplier 1.0 --base-seed 12345 --selection-lasso-multiplier 1.8 --output results/experiments/post_selection_ivqr_r500.csv --dry-run && python scenarios/run_dml_ivqr.py --reps 500 --alpha-min -1 --alpha-max 3 --alpha-grid-size 21 --critical-value-multiplier 1.0 --base-seed 12345 --dml-k-folds 3 --dml-quantile-penalty 0.07 --dml-quantile-solver highs-ipm --dml-ridge-alpha 1.0 --output results/experiments/dml_ivqr_r500.csv --dry-run"
import_check = "python -c \"import analysis; import dgp; import estimators; import ivqr; import simulation\""
lint = "ruff check src tests scenarios scripts"
results = "python scripts/make_results.py"
audit_r500 = "python scripts/audit_r500_results.py"
audit_r500_phase2 = "python scripts/audit_r500_phase2.py"
build_r500_thesis_package = "python scripts/build_r500_thesis_package.py"
raw_manifest = "python scripts/update_raw_manifest.py"
test = "pytest tests -m 'not slow'"
test_slow = "pytest tests -m slow"
