[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "master-thesis-ivqr"
version = "0.1.0"
description = "Monte Carlo simulation project for IVQR and DML-style IVQR estimators."
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--basetemp=.pytest_tmp -p no:ddtrace -p no:cacheprovider"
markers = [
    "slow: long-running simulation, multiprocessing, or subprocess integration tests",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.10,<3.13"
numpy = "*"
pandas = "*"
scipy = "*"
scikit-learn = "*"
statsmodels = "*"
matplotlib = "*"
pytest = "*"
ruff = ">=0.15.21,<0.16"

[tool.pixi.pypi-dependencies]
master-thesis-ivqr = { path = ".", editable = true }

[tool.pixi.tasks]
fast = "python scenarios/run_simulation.py --mode fast"
full = "python scenarios/run_simulation.py --mode full"
final_oracle = "python scenarios/run_simulation.py --mode full --estimators oracle --reps 500 --alpha-min -1 --alpha-max 3 --alpha-grid-size 21 --critical-value-multiplier 1.0 --base-seed 12345 --output results/raw/oracle_ivqr/oracle_ivqr.csv"
final_post_selection = "python scenarios/run_simulation.py --mode full --estimators post_selection --reps 500 --alpha-min -1 --alpha-max 3 --alpha-grid-size 21 --critical-value-multiplier 1.0 --base-seed 12345 --selection-lasso-multiplier 1.8 --output results/raw/post_selection_ivqr/post_selection_ivqr.csv"
final_dml = "python scenarios/run_simulation.py --mode full --estimators dml --reps 500 --alpha-min -1 --alpha-max 3 --alpha-grid-size 21 --critical-value-multiplier 1.0 --base-seed 12345 --dml-k-folds 3 --dml-quantile-penalty 0.07 --dml-quantile-solver highs-ipm --dml-ridge-alpha 1.0 --output results/raw/dml_ivqr/dml_ivqr.csv"
final_dry_run = "python scenarios/run_simulation.py --mode full --estimators oracle --reps 500 --alpha-min -1 --alpha-max 3 --alpha-grid-size 21 --critical-value-multiplier 1.0 --base-seed 12345 --output results/raw/oracle_ivqr/oracle_ivqr.csv --dry-run && python scenarios/run_simulation.py --mode full --estimators post_selection --reps 500 --alpha-min -1 --alpha-max 3 --alpha-grid-size 21 --critical-value-multiplier 1.0 --base-seed 12345 --selection-lasso-multiplier 1.8 --output results/raw/post_selection_ivqr/post_selection_ivqr.csv --dry-run && python scenarios/run_simulation.py --mode full --estimators dml --reps 500 --alpha-min -1 --alpha-max 3 --alpha-grid-size 21 --critical-value-multiplier 1.0 --base-seed 12345 --dml-k-folds 3 --dml-quantile-penalty 0.07 --dml-quantile-solver highs-ipm --dml-ridge-alpha 1.0 --output results/raw/dml_ivqr/dml_ivqr.csv --dry-run"
import_check = "python -c \"import analysis; import dgp; import estimators; import ivqr; import simulation\""
lint = "ruff check src tests scenarios scripts"
results = "python scripts/make_results.py"
raw_manifest = "python scripts/update_raw_manifest.py"
build_full_run_report = { cmd = "python -m analysis.full_run_report && quarto render documents/Full_Run_Results.qmd --to pdf", env = { SOURCE_DATE_EPOCH = "1782864000" } }
build_full_run_meeting_report = { cmd = "python -m analysis.full_run_report && quarto render documents/Full_Run_Results_Meeting.qmd --to pdf", env = { SOURCE_DATE_EPOCH = "1782864000" } }
build_all_full_run_reports = { depends-on = ["build_full_run_report", "build_full_run_meeting_report"] }
test = "pytest tests -m 'not slow'"
test_slow = "pytest tests -m slow"
